# hayazip

./: .gitignore  Cargo.toml  README.md  README_JA.md  pyproject.toml
.github/workflows/: release.yml
examples/uv_python/: extract_demo.py
src/: archive.rs  compress.rs  entry.rs  error.rs  extract.rs  lib.rs
tests/: integration_test.rs
