[package]
name = "hayazip"
version = "0.1.0"
edition = "2024"

[lib]
name = "hayazip"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
crc32fast = "1.5.0"
libdeflater = "1.25.2"
memmap2 = "0.9.10"
pyo3 = { version = "0.28.2", features = ["extension-module"] }
rayon = "1.11.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
walkdir = "2.5.0"
