[package]
name = "hayazip"
version = "0.1.4"
edition = "2024"
description = "Blazing fast, multi-threaded SIMD ZIP extraction library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/igtm/hayazip"
homepage = "https://github.com/igtm/hayazip"

[lib]
name = "hayazip"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
crc32fast = "1.5.0"
libdeflater = "1.25.2"
memmap2 = "0.9.10"
pyo3 = { version = "0.28.2", features = ["abi3-py38", "extension-module"] }
rayon = "1.11.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
walkdir = "2.5.0"
