[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hayazip"
version = "0.1.0"
description = "Blazing fast, multi-threaded SIMD ZIP extraction library"
readme = "README.md"
authors = [{ name = "Antigravity", email = "antigravity@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]
